<resources>
    <string name="OK">OK</string>
    <string name="abc_action_bar_home_description">Navigate home</string>
    <string name="abc_action_bar_up_description">Navigate up</string>
    <string name="abc_action_menu_overflow_description">More options</string>
    <string name="abc_action_mode_done">Done</string>
    <string name="abc_activity_chooser_view_see_all">See all</string>
    <string name="abc_activitychooserview_choose_application">Choose an app</string>
    <string name="abc_capital_off">OFF</string>
    <string name="abc_capital_on">ON</string>
    <string name="abc_menu_alt_shortcut_label">Alt+</string>
    <string name="abc_menu_ctrl_shortcut_label">Ctrl+</string>
    <string name="abc_menu_delete_shortcut_label">delete</string>
    <string name="abc_menu_enter_shortcut_label">enter</string>
    <string name="abc_menu_function_shortcut_label">Function+</string>
    <string name="abc_menu_meta_shortcut_label">Meta+</string>
    <string name="abc_menu_shift_shortcut_label">Shift+</string>
    <string name="abc_menu_space_shortcut_label">space</string>
    <string name="abc_menu_sym_shortcut_label">Sym+</string>
    <string name="abc_prepend_shortcut_label">Menu+</string>
    <string name="abc_search_hint">Search…</string>
    <string name="abc_searchview_description_clear">Clear query</string>
    <string name="abc_searchview_description_query">Search query</string>
    <string name="abc_searchview_description_search">Search</string>
    <string name="abc_searchview_description_submit">Submit query</string>
    <string name="abc_searchview_description_voice">Voice search</string>
    <string name="abc_shareactionprovider_share_with">Share with</string>
    <string name="abc_shareactionprovider_share_with_application">Share with %s</string>
    <string name="abc_toolbar_collapse_description">Collapse</string>
    <string name="accept">Accept</string>
    <string name="account_blocked">Your account is blocked.</string>
    <string name="action_add">Add</string>
    <string name="action_add_image">Add image</string>
    <string name="action_add_task">Add Task</string>
    <string name="action_archive">Archive</string>
    <string name="action_block">Block</string>
    <string name="action_close_app">Are you sure you want to exit?</string>
    <string name="action_copied_clipboard">Copied to clipboard</string>
    <string name="action_copy">Copy</string>
    <string name="action_custom">Custom</string>
    <string name="action_delete">Delete</string>
    <string name="action_delete_chat">Are you sure you want to delete this conversation?</string>
    <string name="action_delete_messages">Are you sure you want to delete these messages?</string>
    <string name="action_download">Download</string>
    <string name="action_edit">Edit</string>
    <string name="action_filter">Filter</string>
    <string name="action_later">Later</string>
    <string name="action_more">Read More</string>
    <string name="action_or">or</string>
    <string name="action_reload">Reload</string>
    <string name="action_report">Report</string>
    <string name="action_save">Save</string>
    <string name="action_screenshot">Screenshot</string>
    <string name="action_search">Search</string>
    <string name="action_send">Send</string>
    <string name="action_share">Share</string>
    <string name="action_show_user">Show user</string>
    <string name="action_unarchive">Unarchive</string>
    <string name="action_unblock">Unblock</string>
    <string name="action_update">Update</string>
    <string name="action_update_task">Update Task</string>
    <string name="ad">Ad</string>
    <string name="add_group">Add group</string>
    <string name="add_note">Add Note</string>
    <string name="advertisement">Advertisement</string>
    <string name="app_download">Your app is downloading. Please wait...</string>
    <string name="app_list_dialog_content_trial_expired">This application is temporarily out of service. Please try again later.</string>
    <string name="app_list_dialog_title_sorry">Sorry</string>
    <string name="app_name">G-Farm</string>
    <string name="app_not_found">No app to list !</string>
    <string name="app_notifications">Notifications</string>
    <string name="app_version">App Version</string>
    <string name="appbar_scrolling_view_behavior">com.google.android.material.appbar.AppBarLayout$ScrollingViewBehavior</string>
    <string name="application_restart_info">The application will restart to apply new changes</string>
    <string name="applyze_api_key">tKcdWgA5O7H2L0UAK4IpDMqDedkMY6VC2AafIs3mvaI=</string>
    <string name="applyze_app_key">mK3D5H+lAPPrmJL5VvCD68Hu0/w=</string>
    <string name="archived_chats">Archived chats (%1$d)</string>
    <string name="archived_chats_without_count">Archived chats</string>
    <string name="are_you_sure_delete">Are you sure you want to delete this ?</string>
    <string name="authority_push">You have been assigned authority.</string>
    <string name="authority_revoke_push">Your authorization has been revoked.</string>
    <string name="authorized_by">%1$s has been assigned %2$s by %3$s</string>
    <string name="back">Back</string>
    <string name="back_vector_path">M50 25,L80 50,M20 50,L80 50,M50 75,L80 50</string>
    <string name="ban_push">You have been blocked from chat by the application authority.</string>
    <string name="banned_by">%1$s banned by %2$s</string>
    <string name="block_user">Are you sure you want to block this user?</string>
    <string name="blocked_by_app_manager">This user has been blocked by the application manager.</string>
    <string name="blocked_users">Blocked Users</string>
    <string name="blocked_users_description">You can view and manage blocked users here</string>
    <string name="bottom_sheet_behavior">com.google.android.material.bottomsheet.BottomSheetBehavior</string>
    <string name="button_allow">Allow</string>
    <string name="button_deny">Deny</string>
    <string name="buy">Buy</string>
    <string name="cancel">Cancel</string>
    <string name="catalog_product_price">Product Price :</string>
    <string name="change_font_size">Font Size</string>
    <string name="change_language">Change Language</string>
    <string name="change_password">Change password</string>
    <string name="channel_detail_description">Description</string>
    <string name="channel_detail_statistics">Statistics</string>
    <string name="character_counter_content_description">Characters entered %1$d of %2$d</string>
    <string name="character_counter_overflowed_content_description">Character limit exceeded %1$d of %2$d</string>
    <string name="character_counter_pattern">%1$d/%2$d</string>
    <string name="chat_action_block">Block User</string>
    <string name="chat_action_block_info">After this process, this user will not be able to see you on user list and send message to you.</string>
    <string name="chat_action_blocked_by_user">The user blocked you</string>
    <string name="chat_action_blocked_user">User has been blocked</string>
    <string name="chat_action_blocked_user_list">Blocked user list</string>
    <string name="chat_action_invalid_account">This account not suitable for chat feature</string>
    <string name="chat_action_unblock">Unblock User</string>
    <string name="chat_action_unblock_info">Are you sure you want to unblock this user?</string>
    <string name="chat_action_unblocked_user">User has been unblocked</string>
    <string name="chat_change_user_role">Change User Role</string>
    <string name="chat_complained">Complained</string>
    <string name="chat_force_update">You should update the application to use this feature.</string>
    <string name="chat_list">Chat List</string>
    <string name="chat_logs">System Logs</string>
    <string name="chat_logs_description">You can view chat logs here</string>
    <string name="chat_module">Chat</string>
    <string name="chat_remove_user_role">Remove %1$s Role</string>
    <string name="chat_reported_by">Sender</string>
    <string name="chat_reports">Reports</string>
    <string name="chat_reports_description">You can view and manage reports here</string>
    <string name="chat_role">Role</string>
    <string name="chat_role_append_description">Are you sure you want to give this user %1$s role ?</string>
    <string name="chat_role_append_warning">Warning</string>
    <string name="chat_role_appended">User is assigned %1$s role</string>
    <string name="chat_role_management">Role Management</string>
    <string name="chat_role_management_description">You can view and manage users role here</string>
    <string name="chat_username">Username</string>
    <string name="chip_text">Chip text</string>
    <string name="clear_text_end_icon_content_description">Clear text</string>
    <string name="close">Close</string>
    <string name="color">Color</string>
    <string name="com.crashlytics.android.build_id">97241d65-def6-4c4a-9eca-b73ad4d086e3</string>
    <string name="common_error">Sorry, something went wrong. Please try again later</string>
    <string name="common_google_play_services_enable_button">Enable</string>
    <string name="common_google_play_services_enable_text">%1$s won\'t work unless you enable Google Play services.</string>
    <string name="common_google_play_services_enable_title">Enable Google Play services</string>
    <string name="common_google_play_services_install_button">Install</string>
    <string name="common_google_play_services_install_text">%1$s won\'t run without Google Play services, which are missing from your device.</string>
    <string name="common_google_play_services_install_title">Get Google Play services</string>
    <string name="common_google_play_services_notification_channel_name">Google Play services availability</string>
    <string name="common_google_play_services_notification_ticker">Google Play services error</string>
    <string name="common_google_play_services_unknown_issue">%1$s is having trouble with Google Play services. Please try again.</string>
    <string name="e_commerce_list_no_product_description">There are currently no added items in the shop.</string>
    <string name="e_commerce_list_no_product_title">No products added.</string>
    <string name="e_commerce_my_orders_title">My Orders</string>
    <string name="e_commerce_result_credit_card_failed_title">Error Message</string>
    <string name="e_commerce_result_failed_action_update_payment_method">Update Payment Method</string>
    <string name="e_commerce_result_failed_description">Sorry, payment failed. You can change the payment method and try again.</string>
    <string name="e_commerce_result_failed_title">Payment failed.</string>
    <string name="e_commerce_result_success_action_continue_shopping">Continue Shopping</string>
    <string name="e_commerce_result_success_description">Thanks for your order, we hope you enjoyed shopping with us.</string>
    <string name="e_commerce_result_success_title">It’s ordered!</string>
    <string name="images">Images</string>
    <string name="logout">Logout</string>
    <string name="new_password">New Password</string>
    <string name="new_password_repeat">New Password (Repeat)</string>
    <string name="note_description">Description</string>
    <string name="notification_sound">Notification Sound</string>
    <string name="old_password">Old Password</string>
    <string name="permission_required">Permission Required!</string>
    <string name="permission_settings">Go to Permissions</string>
    <string name="profile">Profile</string>
    <string name="title">Title</string>
    <string name="try_again">Try Again</string>
    <string name="user_agreement_settings">User Agreement</string>
    <string name="user_my_address_title">My Addresses</string>
    <string name="user_status">Status</string>
</resources>