<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android" xmlns:app="http://schemas.android.com/apk/res-auto" xmlns:aapt="http://schemas.android.com/aapt">
    <item android:icon="@drawable/ic_action_delete" android:id="@+id/action_delete" android:title="@string/action_delete" app:showAsAction="always"/>
    <item android:icon="@drawable/ic_action_copy" android:id="@+id/action_copy" android:title="@string/action_copy" app:showAsAction="always"/>
    <item android:icon="@drawable/ic_more_vert_white_24dp" android:id="@+id/a_More" android:title="@string/action_more" app:showAsAction="always">
        <menu>
            <item android:icon="@drawable/ic_person_black_24dp" android:id="@+id/action_show_user" android:title="@string/action_show_user"/>
            <item android:icon="@drawable/ic_report_black_24dp" android:id="@+id/action_report" android:title="@string/action_report"/>
            <item android:icon="@drawable/ic_archive_black_24dp" android:id="@+id/action_archive" android:title="@string/action_archive"/>
            <item android:icon="@drawable/ic_delete_forever_black_24dp" android:id="@+id/action_delete_chat" android:title="@string/action_delete"/>
            <item android:icon="@drawable/ic_block_black_24dp" android:id="@+id/action_block_user" android:title="@string/action_block"/>
        </menu>
    </item>
</menu>
