<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android" xmlns:app="http://schemas.android.com/apk/res-auto" xmlns:aapt="http://schemas.android.com/aapt">
    <item android:icon="@drawable/ic_edit_white_24dp" android:id="@+id/action_profile" android:orderInCategory="101" android:title="@string/profile" app:showAsAction="always"/>
    <item android:icon="@drawable/ic_local_shipping_white_24dp" android:id="@+id/action_my_orders" android:visible="false" android:title="@string/e_commerce_my_orders_title" app:showAsAction="collapseActionView"/>
    <item android:icon="@drawable/ic_place_white_24dp" android:id="@+id/action_my_addresses" android:visible="false" android:title="@string/user_my_address_title" app:showAsAction="collapseActionView"/>
    <item android:icon="@drawable/ic_lock_white_36dp" android:id="@+id/action_change_password" android:title="@string/change_password" app:showAsAction="collapseActionView"/>
    <item android:icon="@drawable/ic_exit_to_app_white_36dp" android:id="@+id/action_logout" android:title="@string/logout" app:showAsAction="collapseActionView"/>
</menu>
