<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android" xmlns:app="http://schemas.android.com/apk/res-auto" xmlns:aapt="http://schemas.android.com/aapt">
    <item android:icon="@drawable/ic_message_white_24dp" android:id="@+id/action_edit_status" android:title="@string/user_status" app:showAsAction="always"/>
    <item android:icon="@drawable/ic_edit_white_24dp" android:id="@+id/action_edit" android:title="@string/action_edit" app:showAsAction="always"/>
    <item android:icon="@drawable/ic_block_white_24dp" android:id="@+id/action_block" android:visible="false" android:title="@string/action_block" app:showAsAction="never"/>
    <item android:icon="@drawable/ic_list_white_24dp" android:id="@+id/action_blocked_list" android:visible="false" android:title="@string/chat_action_blocked_user_list" app:showAsAction="ifRoom"/>
</menu>
