<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android" xmlns:app="http://schemas.android.com/apk/res-auto" xmlns:aapt="http://schemas.android.com/aapt" android:id="@+id/constraintLayout" android:layout_width="match_parent" android:layout_height="match_parent">
    <androidx.constraintlayout.widget.ConstraintLayout android:id="@+id/card_view" android:layout_width="match_parent" android:layout_height="wrap_content" android:layout_marginStart="15dp" android:layout_marginEnd="16dp" app:layout_constraintBottom_toTopOf="@+id/result_button" app:layout_constraintEnd_toEndOf="0" app:layout_constraintHorizontal_chainStyle="2" app:layout_constraintStart_toStartOf="0" app:layout_constraintTop_toTopOf="0" app:layout_constraintVertical_chainStyle="2">
        <androidx.constraintlayout.widget.ConstraintLayout android:id="@+id/inner_layout" android:paddingTop="50dp" android:layout_width="match_parent" android:layout_height="wrap_content" app:layout_constraintTop_toTopOf="0">
            <LinearLayout android:orientation="vertical" android:layout_width="match_parent" android:layout_height="wrap_content" app:layout_constraintTop_toTopOf="0">
                <com.mobiroller.views.custom.MobirollerEmptyView android:id="@+id/failed_layout" android:layout_width="match_parent" android:layout_height="250dp" app:backgroundImageTintColor="#f5d8d8" app:description="@string/e_commerce_result_failed_description" app:emptyIcon="@drawable/ic_credit_card" app:showNoContent="true" app:title="@string/e_commerce_result_failed_title"/>
                <com.mobiroller.views.custom.MobirollerEmptyView android:id="@+id/success_layout" android:visibility="gone" android:layout_width="match_parent" android:layout_height="250dp" android:layout_marginBottom="8dp" app:backgroundImageTintColor="#d8f5e5" app:description="@string/e_commerce_result_success_description" app:emptyIcon="@drawable/ic_done" app:title="@string/e_commerce_result_success_title"/>
                <com.mobiroller.views.custom.MobirollerTextView android:gravity="center_horizontal" android:id="@+id/extra_description_text_view" android:visibility="gone" android:layout_width="match_parent" android:layout_height="wrap_content" android:layout_marginTop="21dp" app:colorType="4" app:sizeType="4"/>
                <LinearLayout android:orientation="vertical" android:id="@+id/failed_description_layout" android:layout_width="match_parent" android:layout_height="wrap_content">
                    <com.mobiroller.views.custom.MobirollerTextView android:textStyle="bold" android:gravity="center_horizontal" android:id="@+id/failed_title" android:layout_width="match_parent" android:layout_height="wrap_content" android:layout_marginTop="10dp" android:text="@string/e_commerce_result_credit_card_failed_title" app:colorType="4" app:sizeType="4"/>
                    <com.mobiroller.views.custom.MobirollerTextView android:gravity="center_horizontal" android:id="@+id/failed_description" android:layout_width="match_parent" android:layout_height="wrap_content" android:layout_marginTop="3dp" app:colorType="4" app:sizeType="4"/>
                </LinearLayout>
            </LinearLayout>
        </androidx.constraintlayout.widget.ConstraintLayout>
    </androidx.constraintlayout.widget.ConstraintLayout>
    <com.mobiroller.views.custom.MobirollerButton android:id="@+id/result_button" android:layout_width="200dp" android:layout_height="44dp" android:layout_marginTop="15dp" app:layout_constraintBottom_toTopOf="@+id/continue_shopping_button" app:layout_constraintEnd_toEndOf="0" app:layout_constraintStart_toStartOf="0" app:layout_constraintTop_toBottomOf="@+id/card_view" app:mButtonColorType="6" app:mButtonHasRadius="true" app:mButtonText="@string/e_commerce_result_failed_action_update_payment_method"/>
    <com.mobiroller.views.custom.MobirollerButton android:id="@+id/continue_shopping_button" android:visibility="gone" android:layout_width="200dp" android:layout_height="44dp" android:layout_marginTop="9dp" android:layout_marginBottom="118.5dp" app:layout_constraintEnd_toEndOf="0" app:layout_constraintStart_toStartOf="0" app:layout_constraintTop_toBottomOf="@+id/result_button" app:mButtonBackgroundColor="#f4f6f6" app:mButtonHasRadius="true" app:mButtonText="@string/e_commerce_result_success_action_continue_shopping" app:mButtonTextColor="@color/black"/>
</androidx.constraintlayout.widget.ConstraintLayout>
