<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android" xmlns:app="http://schemas.android.com/apk/res-auto" xmlns:aapt="http://schemas.android.com/aapt" android:id="@+id/coordinator" android:background="@color/white" android:layout_width="match_parent" android:layout_height="match_parent" app:statusBarBackground="@android:color/transparent">
    <com.mobiroller.views.custom.MobirollerSwipeRefreshLayout android:id="@+id/swipe_refresh_layout" android:visibility="visible" android:layout_width="match_parent" android:layout_height="0dp" app:layout_constraintBottom_toBottomOf="0" app:layout_constraintTop_toTopOf="0">
        <androidx.recyclerview.widget.RecyclerView android:id="@+id/list" android:paddingTop="7.5dp" android:visibility="gone" android:clipChildren="false" android:clipToPadding="false" android:layout_width="match_parent" android:layout_height="wrap_content" android:paddingStart="7.5dp" android:paddingEnd="7.5dp" app:layout_behavior="@string/appbar_scrolling_view_behavior"/>
    </com.mobiroller.views.custom.MobirollerSwipeRefreshLayout>
    <com.mobiroller.views.custom.MobirollerEmptyView android:id="@+id/empty_view" android:visibility="gone" android:layout_width="match_parent" android:layout_height="wrap_content" app:backgroundImageTintColor="#f5d8d8" app:description="@string/e_commerce_list_no_product_description" app:emptyIcon="@drawable/ic_no_product_icon" app:layout_constraintBottom_toBottomOf="0" app:layout_constraintEnd_toEndOf="0" app:layout_constraintStart_toStartOf="0" app:layout_constraintTop_toTopOf="0" app:showNoContent="true" app:title="@string/e_commerce_list_no_product_title"/>
</androidx.constraintlayout.widget.ConstraintLayout>
