<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android" xmlns:app="http://schemas.android.com/apk/res-auto" xmlns:aapt="http://schemas.android.com/aapt" android:orientation="vertical" android:layout_width="match_parent" android:layout_height="match_parent">
    <include layout="@layout/toolbar_layout"/>
    <LinearLayout android:orientation="vertical" android:id="@+id/user_update_form" android:layout_width="match_parent" android:layout_height="match_parent">
        <com.rengwuxian.materialedittext.MaterialEditText android:textSize="?attr/font_147" android:id="@+id/change_old_password" android:layout_width="match_parent" android:layout_height="wrap_content" android:layout_marginTop="5dp" android:layout_marginBottom="5dp" android:hint="@string/old_password" android:lines="1" android:inputType="textPassword" android:layout_marginStart="16dp" android:layout_marginEnd="16dp" app:met_floatingLabel="2" app:met_floatingLabelText="@string/old_password"/>
        <com.rengwuxian.materialedittext.MaterialEditText android:textSize="?attr/font_147" android:id="@+id/change_new_password" android:layout_width="match_parent" android:layout_height="wrap_content" android:layout_marginTop="5dp" android:layout_marginBottom="5dp" android:hint="@string/new_password" android:lines="1" android:inputType="textPassword" android:layout_marginStart="16dp" android:layout_marginEnd="16dp" app:met_floatingLabel="2" app:met_floatingLabelText="@string/new_password"/>
        <com.rengwuxian.materialedittext.MaterialEditText android:textSize="?attr/font_147" android:id="@+id/change_new_repeat_password" android:layout_width="match_parent" android:layout_height="wrap_content" android:layout_marginTop="5dp" android:layout_marginBottom="5dp" android:hint="@string/new_password_repeat" android:lines="1" android:inputType="textPassword" android:layout_marginStart="16dp" android:layout_marginEnd="16dp" app:met_floatingLabel="2" app:met_floatingLabelText="@string/new_password_repeat"/>
    </LinearLayout>
</LinearLayout>
