<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android" xmlns:app="http://schemas.android.com/apk/res-auto" xmlns:aapt="http://schemas.android.com/aapt" android:orientation="vertical" android:id="@+id/connection_main_layout" android:layout_width="match_parent" android:layout_height="match_parent">
    <include layout="@layout/toolbar_layout"/>
    <androidx.percentlayout.widget.PercentRelativeLayout android:gravity="center_horizontal" android:paddingBottom="15dp" android:layout_width="match_parent" android:layout_height="match_parent" android:paddingStart="15dp" android:paddingEnd="15dp">
        <androidx.percentlayout.widget.PercentRelativeLayout android:id="@+id/connection_image_layout" android:layout_width="match_parent" app:layout_heightPercent="60%">
            <ImageView android:id="@+id/imageView2" android:padding="8dp" android:layout_width="match_parent" app:layout_heightPercent="50%" app:srcCompat="@drawable/ic_folder_open_white_48dp"/>
            <TextView android:textSize="?attr/font_15" android:textStyle="bold" android:textColor="@color/white" android:gravity="center" android:id="@+id/textView2" android:layout_width="match_parent" android:text="@string/permission_required" android:layout_below="@+id/imageView2" app:layout_heightPercent="10%"/>
            <TextView android:textSize="?attr/font_14" android:textColor="@color/white" android:gravity="center" android:id="@+id/permission_description" android:layout_width="match_parent" android:layout_below="@+id/textView2" app:layout_heightPercent="40%"/>
        </androidx.percentlayout.widget.PercentRelativeLayout>
        <LinearLayout android:orientation="vertical" android:layout_width="match_parent" android:layout_height="wrap_content" android:layout_marginTop="10dp" android:layout_below="@+id/connection_image_layout">
            <View android:background="@color/white" android:layout_width="match_parent" android:layout_height="1dp" android:layout_marginStart="10dp" android:layout_marginEnd="10dp"/>
            <Button android:textSize="?attr/font_14" android:textColor="@color/white" android:layout_gravity="center" android:id="@+id/permission_check" android:background="@color/transparent" android:layout_width="wrap_content" android:layout_height="wrap_content" android:text="@string/permission_settings" android:drawablePadding="2dp" android:textAllCaps="false"/>
            <View android:background="@color/white" android:layout_width="match_parent" android:layout_height="1dp" android:layout_marginStart="10dp" android:layout_marginEnd="10dp"/>
        </LinearLayout>
        <Button android:textSize="?attr/font_14" android:textColor="@color/white" android:id="@+id/try_again" android:background="@color/transparent" android:layout_width="match_parent" android:layout_height="wrap_content" android:layout_marginBottom="30dp" android:text="@string/try_again" android:shadowRadius="2" android:drawableTop="@drawable/refresh_icon" android:layout_weight="1" android:layout_alignParentBottom="true" android:textAllCaps="false"/>
    </androidx.percentlayout.widget.PercentRelativeLayout>
</LinearLayout>
